--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = nodemcu
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^7.0.4
+lib_deps = 
+	bblanchon/ArduinoJson@^7.0.4
+	adafruit/Adafruit SSD1306@^2.5.10
